<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_apptour"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftarkan_akun_anda"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayo_daftar_dan_gabung"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Daftar"
                android:textSize="36sp"
                android:textColor="@color/primary"
                android:id="@+id/textLogin"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/inputNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/container"
                android:drawablePadding="8dp"
                android:hint="@string/masukan_nama_lengkap_anda"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputAlamat"
                android:background="@drawable/container"
                android:drawablePadding="8dp"
                android:hint="@string/masukan_alamat_anda"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jenis_kelamin"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropDown_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputUsername"
                android:background="@drawable/container"
                android:drawableStart="@drawable/ic_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/Email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputPassword"
                android:background="@drawable/container"
                android:drawableStart="@drawable/ic_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnDaftar"
                android:text="@string/daftar"
                style="@style/ButtonGray"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/primary"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMulai"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:text="@string/sudah_memiliki_akun"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</LinearLayout>