<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBg"
        android:layout_width="559dp"
        android:layout_height="491dp"
        android:src="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="36dp"
        android:paddingHorizontal="20dp"
        android:paddingBottom="6dp"
        android:text="@string/titleSplash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="20dp"
        android:text="@string/sebuah_aplikasi_yang_membantu_anda_dalam_menemukan_wisata_di_surabaya"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnMulai"
        style="@style/ButtonMulai"
        android:layout_width="313sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        android:text="@string/mulai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSplash"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMulai"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:text="@string/sudah_memiliki_akun"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints,SmallSp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,SmallSp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>